--- a/todo.txt
+++ b/todo.txt
@@ -1,8 +1,7 @@
-token java nei commenti (proporzione tra token e parole) (?)
-dove si trovano i commenti (posizione)
-classificatore con queste feature (tag etc)
-parser -> classi sintattiche
+dove si trovano i commenti (posizione) espressioni regolari -> nodi non terminali
 
+classificatore tfidf + features (hstack?)
+spiegare linea rilevante
 
 DONE:
 svm lineare/kernel rbf (LinearSVC / SVC (default kernel RBF))
@@ -14,3 +13,6 @@ jaccard
 aggiungere lunghezza come feature
 random forest
 tag nei commenti javadoc
+wrapping (feature selection) [???????? too long]
+threshold for chi2 e f_classif [no threshold]
+information gain [no threshold]
